add site header

--- a/index.html
+++ b/index.html
@@ -6,7 +6,42 @@
     <title>Discord's Layout</title>
     <link rel="stylesheet" href="./css/style.css">
 </head>
-<body>
-    START PROGRESS (test)
+<body class="debug">
+    <header class="site_header">
+        <div class="flex_container">
+            <div class="header_logo">LOGO</div>
+            <!-- / .logo -->
+            <div class="row_menu_bar">
+                <div class="col-5">
+                    Lorem
+                </div>
+                <div class="col-5">
+                    Lorem
+                </div>
+                <div class="col-5">
+                    Lorem
+                </div>
+                <div class="col-5">
+                    Lorem
+                </div>
+                <div class="col-5">
+                    Lorem
+                </div>
+            </div>
+            <!-- /.menu bar -->
+            <div class="header_login">ACCEDI</div>
+            <!-- /.login -->
+        </div>
+    </header>
+    <!-- /.site header -->
+    
+    <main>
+        <section></section>
+        <section></section>
+        <section></section>
+        <section></section>
+    </main>
+    
+    <footer></footer>
 </body>
 </html>
