add first main section

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="debug">
     <header class="site_header">
         <div class="flex_container">
-            <div class="header_logo">LOGO</div>
+            <div class="header_logo"></div>
             <!-- / .logo -->
             <div class="row_menu_bar">
                 <div class="col-5">
@@ -29,18 +29,22 @@
                 </div>
             </div>
             <!-- /.menu bar -->
-            <div class="header_login">ACCEDI</div>
+            <div class="header_login"></div>
             <!-- /.login -->
         </div>
     </header>
     <!-- /.site header -->
     
     <main>
-        <section></section>
+        <section class="download_open_bg">
+            <div class="flex_container">
+            </div>
+        </section>
         <section></section>
         <section></section>
         <section></section>
     </main>
+    <!-- /.site main -->
     
     <footer></footer>
 </body>
