--- a/index.html
+++ b/index.html
@@ -8,25 +8,15 @@
 </head>
 <body class="debug">
     <header class="site_header">
-        <div class="flex_container">
+        <div class="flex_container_header">
             <div class="header_logo"></div>
             <!-- / .logo -->
             <div class="row_menu_bar">
-                <div class="col-5">
-                    Lorem
-                </div>
-                <div class="col-5">
-                    Lorem
-                </div>
-                <div class="col-5">
-                    Lorem
-                </div>
-                <div class="col-5">
-                    Lorem
-                </div>
-                <div class="col-5">
-                    Lorem
-                </div>
+                <div class="col-5"></div>
+                <div class="col-5"></div>
+                <div class="col-5"></div>
+                <div class="col-5"></div>
+                <div class="col-5"></div>
             </div>
             <!-- /.menu bar -->
             <div class="header_login"></div>
@@ -74,7 +64,22 @@
     <!-- /.site main -->
     
     <footer>
+        <div class="footer_top">
+            <div class="flex_container"></div>
+            <div class="footer_nav">
+                <div class="col-4"></div>
+                <div class="col-4"></div>
+                <div class="col-4"></div>
+                <div class="col-4"></div>
+            </div>
+        </div>
+        <!-- /.top footer -->
 
+        <div class="footer_bottom">
+            <div class="logo_footer"></div>
+            <div class="sign_in_footer"></div>
+        </div>
+        <!-- /.bottom footer -->
     </footer>
     <!-- /.site footer -->
 </body>
